[metadata]
name = nano-tank-controller
version = 0.1.1
author = danosh
author-email = dan.antos@seznam.cz
description = Aquarium controller
long-description = README.md
long_description_content_type = text/markdown
platform = arduino
keywords = arduino, aquarium
classifiers =
  Programming Language :: C++
